content/consul/v1.9.x/content/docs/connect/config-entries/service-defaults.mdx
---
layout: docs
page_title: 'Configuration Entry Kind: Service Defaults'
description: >-
  The service-defaults config entry kind controls default global values for a
  service, such as its protocol.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-04T10:42:51-06:00
last_modified: 2025-12-02T13:10:48-08:00
# END AUTO GENERATED METADATA
---

# Service Defaults

-> **v1.8.4+:** On Kubernetes, the `ServiceDefaults` custom resource is supported in Consul versions 1.8.4+.<br />
**v1.5.0+:** On other platforms, this config entry is supported in Consul versions 1.5.0+.

The `service-defaults` config entry kind (`ServiceDefaults` on Kubernetes) controls default global values for a
service, such as its protocol.

## Sample Config Entries

### Default protocol

<Tabs>
<Tab heading="HCL">

Set the default protocol for a service in the default namespace to HTTP:

```hcl
Kind      = "service-defaults"
Name      = "web"
Namespace = "default"
Protocol  = "http"
```

</Tab>
<Tab heading="Kubernetes YAML">

Set the default protocol for a service in the default namespace to HTTP:

```yaml
apiVersion: consul.hashicorp.com/v1alpha1
kind: ServiceDefaults
metadata:
  name: web
spec:
  protocol: http
```

</Tab>
</Tabs>

## Available Fields

<ConfigEntryReference
  keys={[
    {
      name: 'apiVersion',
      description: 'Must be set to `consul.hashicorp.com/v1alpha1`',
      hcl: false,
    },
    {
      name: 'Kind',
      description: {
        hcl: 'Must be set to `service-defaults`',
        yaml: 'Must be set to `ServiceDefaults`',
      },
    },
    {
      name: 'Name',
      description: 'Set to the name of the service being configured.',
      type: 'string: <required>',
      yaml: false,
    },
    {
      name: 'Namespace',
      type: `string: "default"`,
      enterprise: true,
      description: 'Specifies the namespace the config entry will apply to.',
      yaml: false,
    },
    {
      name: 'Meta',
      type: 'map<string|string>: nil',
      description:
        'Specifies arbitrary KV metadata pairs. Added in Consul 1.8.4.',
      yaml: false,
    },
    {
      name: 'metadata',
      children: [
        {
          name: 'name',
          description: 'Set to the name of the service being configured.',
        },
        {
          name: 'namespace',
          description:
            'If running Consul Open Source, the namespace is ignored (see [Kubernetes Namespaces in Consul OSS](/docs/k8s/crds#consul-oss)). If running Consul Enterprise see [Kubernetes Namespaces in Consul Enterprise](/docs/k8s/crds#consul-enterprise) for more details.',
        },
      ],
      hcl: false,
    },
    {
      name: 'Protocol',
      type: `string: "tcp"`,
      description: `Sets the protocol of the service. This is used
                      by Connect proxies for things like observability features and to unlock usage
                      of the [\`service-splitter\`](/docs/connect/config-entries/service-splitter) and
                      [\`service-router\`](/docs/connect/config-entries/service-router) config entries
                      for a service. It also unlocks the ability to define L7 intentions via
                      [\`service-intentions\`](/docs/connect/config-entries/service-intentions).
                      Supported values are one of \`tcp\`, \`http\`, \`http2\`, or \`grpc\`.`,
    },
    {
      name: 'MeshGateway',
      type: 'MeshGatewayConfig: <optional>',
      description: `Controls the default
      [mesh gateway configuration](/docs/connect/gateways/mesh-gateway#connect-proxy-configuration)
      for this service. Added in v1.6.0.`,
      children: [
        {
          name: 'Mode',
          type: 'string: ""',
          description: 'One of `none`, `local`, or `remote`.',
        },
      ],
    },
    {
      name: 'ExternalSNI',
      type: 'string: ""',
      description: `This is an optional setting that allows for
                      the TLS [SNI](https://en.wikipedia.org/wiki/Server_Name_Indication) value to
                      be changed to a non-connect value when federating with an external system.
                      Added in v1.6.0.`,
    },
    {
      name: 'Expose',
      type: 'ExposeConfig: <optional>',
      description: `Controls the default
                      [expose path configuration](/docs/connect/registration/service-registration#expose-paths-configuration-reference)
                      for Envoy. Added in v1.6.2.<br><br>
                      Exposing paths through Envoy enables a service to protect itself by only listening on localhost, while still allowing
                      non-Connect-enabled applications to contact an HTTP endpoint.
                      Some examples include: exposing a \`/metrics\` path for Prometheus or \`/healthz\` for kubelet liveness checks.`,
      children: [
        {
          name: 'Checks',
          type: 'bool: false',
          description: `If enabled, all HTTP and gRPC checks registered with the agent are exposed through Envoy.
        Envoy will expose listeners for these checks and will only accept connections originating from localhost or Consul's
        [advertise address](/docs/agent/options#advertise). The port for these listeners are dynamically allocated from
        [expose_min_port](/docs/agent/options#expose_min_port) to [expose_max_port](/docs/agent/options#expose_max_port).
        This flag is useful when a Consul client cannot reach registered services over localhost. One example is when running
        Consul on Kubernetes, and Consul agents run in their own pods.`,
        },
        {
          name: 'Paths',
          type: 'array<Path>: []',
          description: 'A list of paths to expose through Envoy.',
          children: [
            {
              name: 'Path',
              type: 'string: ""',
              description:
                'The HTTP path to expose. The path must be prefixed by a slash. ie: `/metrics`.',
            },
            {
              name: 'LocalPathPort',
              type: 'int: 0',
              description:
                'The port where the local service is listening for connections to the path.',
            },
            {
              name: 'ListenerPort',
              type: 'int: 0',
              description: `The port where the proxy will listen for connections. This port must be available
           for the listener to be set up. If the port is not free then Envoy will not expose a listener for the path,
           but the proxy registration will not fail.`,
            },
            {
              name: 'Protocol',
              type: 'string: "http"',
              description:
                'Sets the protocol of the listener. One of `http` or `http2`. For gRPC use `http2`.',
            },
          ],
        },
      ],
    },
  ]}
/>

## ACLs

Configuration entries may be protected by [ACLs](/docs/security/acl).

Reading a `service-defaults` config entry requires `service:read` on the resource.

Creating, updating, or deleting a `service-defaults` config entry requires
`service:write` on the resource.
